--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=HeroToy
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/ThirdPerson/Maps/EzraLevel.EzraLevel
+GameDefaultMap=/Game/ThirdPerson/Maps/EzraLevel.EzraLevel
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
